--- a/500s90f6t1g0_01py1e2+y2e2_y1e2+y3e2_y2e2+y3e2(tpot2).ipynb
+++ b/500s90f6t1g0_01py1e2+y2e2_y1e2+y3e2_y2e2+y3e2(tpot2).ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaj3k/i63HYNrgxBDMXNK8",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMaj3k/i63HYNrgxBDMXNK8"
     },
     "kernelspec": {
       "name": "python3",
@@ -4124,16 +4123,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/hanafimajid/tpot-mtr/blob/main/500s90f6t1g0_01py1e2%2By2e2_y1e2%2By3e2_y2e2%2By3e2(tpot2).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
