--- a/500s90f3t1g0_01py1_y1e2_y1e3(tpot2).ipynb
+++ b/500s90f3t1g0_01py1_y1e2_y1e3(tpot2).ipynb
@@ -1,16 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/hanafimajid/tpot-mtr/blob/main/500s90f3t1g0_01py1_y1e2_y1e3(tpot2).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
@@ -1528,8 +1518,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNy1ApwnYLkH7+O5PP2DuuE",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNy1ApwnYLkH7+O5PP2DuuE"
     },
     "kernelspec": {
       "display_name": "Python 3",
