--- a/500s90f6t1g0_01py1_y2_y3(tpot2).ipynb
+++ b/500s90f6t1g0_01py1_y2_y3(tpot2).ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSRWvl2CJN/q980DGRypKX"
+      "authorship_tag": "ABX9TyNSRWvl2CJN/q980DGRypKX",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -4120,9 +4121,21 @@
           }
         }
       }
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/hanafimajid/tpot-mtr/blob/main/500s90f6t1g0_01py1_y2_y3(tpot2).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
