--- a/500s90f6t1g0_01py1+y2_y1+y3_y2+y3(tpot2).ipynb
+++ b/500s90f6t1g0_01py1+y2_y1+y3_y2+y3(tpot2).ipynb
@@ -1,7 +1,9 @@
 {
   "nbformat": 4,
-  "nbformat_minor": 5,
+  "nbformat_minor": 0,
+  "metadata": {
     "colab": {
+      "base_uri": "https://localhost:8080/"
       "provenance": [],
       "authorship_tag": "ABX9TyO1f2IXKXqrg6Y34Xyrm6h5"
     },
